--- a/predator-prey/app.ipynb
+++ b/predator-prey/app.ipynb
@@ -8,27 +8,22 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Realizar un programa interactivo del caso presa-predador visto en practicas anteriores, que permita estudiar las salidas del programa cuando se cambien las condiciones de contornos y parámetros de entrada. Graficar en pantalla los diagramas poblacionales y el diagrama de fase.\n",
+    "Realizar un programa interactivo, del caso seleccionado anteriormente, que permita estudiar las salidas del programa cuando se cambien las variables de entrada iniciales y parámetros de entrada. Graficar en pantalla los diagramas correspondientes (variable estudiada en función del tiempo y el diagrama de fase).\n",
     "\n",
-    "Considere los parámetros de natalidad de liebres y mortalidad de zorros analizados en el caso para una población ideal de 500 liebres y 10 zorros (ver apuntes de cátedra).\n",
+    "Si sistema es el modelo Depredador-Presa, considere los parámetros de natalidad de liebres y mortalidad de zorros analizados en el caso para una población ideal de 500 liebres y 10 zorros (ver apuntes de cátedra).\n",
     "\n",
-    "Deberá presentar un informe que contenga (archivo README.info o un pdf):\n",
+    "Deberá presentar un informe que contenga:\n",
     "\n",
+    "Instrucciones para el uso básico de la aplicación o programa. \n",
     "Una explicación de los algoritmos principales utilizados en el programa.\n",
     "Pruebas de simulación:\n",
-    "Una simulación con los valores por defecto: 2500 liebres y 2 zorros.\n",
+    "Una simulación con los valores por defecto (los vistos en los casos de los apuntes).\n",
     "Dos simulaciones distintas cambiando las condiciones iniciales.\n",
-    "Para cada caso realizar una interpretación de los gráficos de comportamiento de las poblaciones, incluyendo capturas de los gráficos poblacionales y de diagrama de fase."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Importamos las Librerias"
+    "Para cada caso realizar una interpretación de los gráficos, incluyendo capturas de los gráficos."
    ]
   },
   {
