--- a/predator-prey/app.ipynb
+++ b/predator-prey/app.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Caso Predador-Presa (Lotka-Volterra)"
+    "# Predator Prey - Predador Presa\n"
    ]
   },
   {
